--- a/web.html
+++ b/web.html
@@ -1,1 +1,9 @@
-test
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>Tento web je spravován Matyášem Frendlem</h1>
+    </body>
+</html>
