--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE=html>
 <html>
     <head>
-        <meta charset="Windows-1250"/>
+        <meta charset="UTF-8"/>
         <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <title>Index</title>
     </head>
     <body>
         <header>
             <div class="header_c_1">
-                <a href=""><img src=".\assets\images\logo.jpg" class="logo"></a>
+                <a href=""><img src=".\assets\images\light.png" class="logo"></a>
             </div>
             <div class="header_c_2">
-                <a href=""><div class="title">Nadpiss</div></a>
+                <a href=""><div class="title">EcoGlow</div></a>
             </div>
             <div class="header_c_3">
-            <a href="">=)</a>
+            <a href="" class="menu_btn"><span>O nás</span></a>
+            <a href="" class="menu_btn"><span>Kontakt</span></a>
+            <a href="" class="menu_btn"><span>Hledat</span></a>
             </div>
         </header>
+        <head_title>
+            <div class="hero-text">
+                <h1 class="hero">EcoGlow</h1>
+                <p class="slogan">"Světlo, které šetří planetu."</p>
+                <p class="popis">EcoGlow je inovativní e-shop specializující se na ekologická a energeticky úsporná svítidla pro domácnosti a kanceláře. Naším cílem je propojit moderní design s udržitelností a nabídnout zákazníkům produkty, které jsou šetrné k životnímu prostředí i k jejich peněžence.</p>
+            </div>
+        </head_title>
+        <main>
+            <div class="content">
+                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
+                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
+                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
+                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
+            </div>
+        </main>
     </body>
 </html>
