--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE=html>
 <html>
     <head>
         <meta charset="UTF-8"/>
@@ -27,14 +26,24 @@
                 <h1 class="hero">EcoGlow</h1>
                 <p class="slogan">"Světlo, které šetří planetu."</p>
                 <p class="popis">EcoGlow je inovativní e-shop specializující se na ekologická a energeticky úsporná svítidla pro domácnosti a kanceláře. Naším cílem je propojit moderní design s udržitelností a nabídnout zákazníkům produkty, které jsou šetrné k životnímu prostředí i k jejich peněžence.</p>
+                <a href="#main"><img src=".\assets\images\arrow_white.png" class="arrow"></a>
             </div>
         </head_title>
+        <h1 id="main" style="text-align: center; font-size: 2.5vw; margin: -5vw 0 0 0; display: relative;">Naše produkty</h1>
         <main>
             <div class="content">
-                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
-                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
-                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
-                <a href="product_detail"><div class="card"><img src="">Produt_1</div></a>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
             </div>
         </main>
     </body>
