--- a/index.html
+++ b/index.html
@@ -32,19 +32,20 @@
         <h1 id="main" style="text-align: center; font-size: 2.5vw; margin: -5vw 0 0 0; display: relative;">Naše produkty</h1>
         <main>
             <div class="content">
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
-                <div class="card"><a href="product_detail"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produt_1</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
+                <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
             </div>
         </main>
+        <a href="cart_1.html"><div class="cart">Košík <img src=".\assets\images\kosik.png"></div></a>
     </body>
 </html>
