--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <body>
         <header>
             <div class="header_c_1">
-                <a href=""><img src=".\assets\images\light.png" class="logo"></a>
+                <a href="index.html"><img src=".\assets\images\light.png" class="logo"></a>
             </div>
             <div class="header_c_2">
-                <a href=""><div class="title">EcoGlow</div></a>
+                <a href="index.html"><div class="title">EcoGlow</div></a>
             </div>
             <div class="header_c_3">
-            <a href="" class="menu_btn"><span>O nás</span></a>
-            <a href="" class="menu_btn"><span>Kontakt</span></a>
-            <a href="" class="menu_btn"><span>Hledat</span></a>
+            <a href="about_us.html" class="menu_btn"><span>O nás</span></a>
+            <a href="contact.html" class="menu_btn"><span>Kontakt</span></a>
+            <a href="search.html" class="menu_btn"><span>Hledat</span></a>
             </div>
         </header>
         <head_title>
@@ -29,7 +29,7 @@
                 <a href="#main"><img src=".\assets\images\arrow_white.png" class="arrow"></a>
             </div>
         </head_title>
-        <h1 id="main" style="text-align: center; font-size: 2.5vw; margin: -5vw 0 0 0; display: relative;">Naše produkty</h1>
+        <h1 id="main" style="text-align: center; font-size: 2.5vw; margin: -5vw 0 0 0; display: relative;">Námi <p style="margin: 0px 0 0 0;">doporučené produkty</p></h1>
         <main>
             <div class="content">
                 <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
@@ -46,6 +46,11 @@
                 <div class="card"><a href="product_detail.html"><img src=".\assets\images\central_white.png"><span style="font-size: 1.3vw;">Produkt</span><span>Zobrazit detail</span></a></div>
             </div>
         </main>
-        <a href="cart_1.html"><div class="cart">Košík <img src=".\assets\images\kosik.png"></div></a>
+        <a href="cart_1.html"><div class="cart">Košík<img style ="margin: 0 0 0 -8px;"src=".\assets\images\cart.png"></div></a>
+        <footer>
+            <div class="lista">
+                Made by Matyáš Frendl at home
+            </div>
+        </footer>
     </body>
 </html>
