--- a/cart_3.html
+++ b/cart_3.html
@@ -27,20 +27,14 @@
                 <h1>- Shrnutí objednávky -</h1>
             </div>
             <div class="form">
-                <label for="jmeno">Jméno</label>
-                <input type="text" id="jmeno" name="jmeno">
-
-                <label for="email">E-mail</label>
-                <input type="email" id="email" name="email">
-
-                <label for="telefon">Telefon</label>
-                <input type="tel" id="telefon" name="telefon">
-
-                <label for="adresa">Adresa</label>
-                <input type="text" id="adresa" name="adresa">
-
-                <label for="poznamka">Poznámka</label>
-                <textarea id="poznamka" name="poznamka" rows="4"></textarea>
+                <div id="souhrn">
+                    <p>Jméno a příjmení</p>
+                    <p id=""
+                    <p>Jméno a příjmení</p>
+                    <p>Jméno a příjmení</p>
+                    <p>Jméno a příjmení</p>
+                    <p>Jméno a příjmení</p>
+                </div>
             </div>
 
             <div class="move_btns">
